# avr-i2c-slave

./: .envrc  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
src/: i2c_slave.rs  main.rs
