[package]
name = "i2c-slave"
version = "0.1.0"
authors = ["Kirill Chayka <kirillfx@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "i2c-slave"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "0.1.2"
embedded-hal = "0.2.3"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "1a0040dc07d37054ccaa93d43a9d2db5f46da3b2"
features = ["sparkfun-promini-5v"]

[dependencies.avr-device]
version = "0.5.3"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
